--- a/src/css/concated.sass
+++ b/src/css/concated.sass
@@ -8,6 +8,7 @@ $mobile-medium: 640px
 $mobile-small: 480px
 $mobile-x-small: 320px
 $main-color: #6bb6ee
+$main-color: #60b4f9
 
 @import animations
 @import fonts
