--- a/src/index.jade
+++ b/src/index.jade
@@ -16,6 +16,10 @@ html(lang='en')
 				.categories-slider-content
 					.categories-label
 						span популярные услуги:
+					.next-slide
+						span >
+					.prev-slide
+						span <
 					ul.categories-line
 						li(href="#" data-category="category-1").active
 							span Судебная практика
@@ -27,9 +31,10 @@ html(lang='en')
 							span Абонентское обслуживание
 					ul.contents-container
 						li#category-1.slide
-							.full-col
-								h2 Судебная практика
-								p Описание услуги в нескольких словах. Это должен быть продающий текст.
+							.left-col
+								.slide-description
+									h2 Судебная практика
+									p Описание услуги в нескольких словах. Это должен быть продающий текст.
 								ul.services-list
 									li
 										div.
@@ -45,14 +50,22 @@ html(lang='en')
 										div.
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 487.958 487.958" style="fill: rgb(255, 255, 255);" xml:space="preserve"> <g style="fill: rgb(255, 255, 255);"> <path d="M483.058,215.613l-215.5-177.6c-4-3.3-9.6-4-14.3-1.8c-4.7,2.2-7.7,7-7.7,12.2v93.6c-104.6,3.8-176.5,40.7-213.9,109.8   c-32.2,59.6-31.9,130.2-31.6,176.9c0,3.8,0,7.4,0,10.8c0,6.1,4.1,11.5,10.1,13.1c1.1,0.3,2.3,0.4,3.4,0.4c4.8,0,9.3-2.5,11.7-6.8   c73-128.7,133.1-134.9,220.2-135.2v93.3c0,5.2,3,10,7.8,12.2s10.3,1.5,14.4-1.8l215.4-178.2c3.1-2.6,4.9-6.4,4.9-10.4   S486.158,218.213,483.058,215.613z M272.558,375.613v-78.1c0-3.6-1.4-7-4-9.5c-2.5-2.5-6-4-9.5-4c-54.4,0-96.1,1.5-136.6,20.4   c-35,16.3-65.3,44-95.2,87.5c1.2-39.7,6.4-87.1,28.1-127.2c34.4-63.6,101-95.1,203.7-96c7.4-0.1,13.4-6.1,13.4-13.5v-78.2   l180.7,149.1L272.558,375.613z" style="fill: rgb(255, 255, 255);"></path> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> </svg>
 										a(href="#") Подробнее
+								ul.additional
+									li Оформлению строительного паспорта
+									li Получению градостроительных условий и ограничений
+									li Изменению функционального назначения нежилого помещения
+							.right-col
+								.image-holder
+									img(src="http://lawprepdehradun.com/images/about_law.png", alt="image")
 							.full-col
 								a.btn Заказать услугу
 								a.btn Заказать консультацию
 
 						li#category-2.slide.hidden
-							.full-col
-								h2 Миграционное право
-								p Описание услуги в нескольких словах. Это должен быть продающий текст.
+							.left-col
+								.slide-description
+									h2 Миграционное право
+									p Описание услуги в нескольких словах. Это должен быть продающий текст.
 								ul.services-list
 									li
 										div.
@@ -64,14 +77,27 @@ html(lang='en')
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 60 60" style="fill: rgb(255, 255, 255);" xml:space="preserve"> <g style="fill: rgb(255, 255, 255);"> <path d="M30,0C13.458,0,0,13.458,0,30s13.458,30,30,30s30-13.458,30-30S46.542,0,30,0z M30,58C14.561,58,2,45.439,2,30   S14.561,2,30,2s28,12.561,28,28S45.439,58,30,58z" style="fill: rgb(255, 255, 255);"></path> <path d="M30,6c-0.552,0-1,0.447-1,1v23H14c-0.552,0-1,0.447-1,1s0.448,1,1,1h16c0.552,0,1-0.447,1-1V7C31,6.447,30.552,6,30,6z" style="fill: rgb(255, 255, 255);"></path> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> </svg>
 										b 26 
 										span  р. дней
+									li
+										div.
+											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 487.958 487.958" style="fill: rgb(255, 255, 255);" xml:space="preserve"> <g style="fill: rgb(255, 255, 255);"> <path d="M483.058,215.613l-215.5-177.6c-4-3.3-9.6-4-14.3-1.8c-4.7,2.2-7.7,7-7.7,12.2v93.6c-104.6,3.8-176.5,40.7-213.9,109.8   c-32.2,59.6-31.9,130.2-31.6,176.9c0,3.8,0,7.4,0,10.8c0,6.1,4.1,11.5,10.1,13.1c1.1,0.3,2.3,0.4,3.4,0.4c4.8,0,9.3-2.5,11.7-6.8   c73-128.7,133.1-134.9,220.2-135.2v93.3c0,5.2,3,10,7.8,12.2s10.3,1.5,14.4-1.8l215.4-178.2c3.1-2.6,4.9-6.4,4.9-10.4   S486.158,218.213,483.058,215.613z M272.558,375.613v-78.1c0-3.6-1.4-7-4-9.5c-2.5-2.5-6-4-9.5-4c-54.4,0-96.1,1.5-136.6,20.4   c-35,16.3-65.3,44-95.2,87.5c1.2-39.7,6.4-87.1,28.1-127.2c34.4-63.6,101-95.1,203.7-96c7.4-0.1,13.4-6.1,13.4-13.5v-78.2   l180.7,149.1L272.558,375.613z" style="fill: rgb(255, 255, 255);"></path> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> </svg>
+										a(href="#") Подробнее
+								ul.additional
+									li Получению разрешения на начало строительных работ
+									li Вводу в эксплуатацию
+									li Изготовлению технического паспорта
+									li Другим вопросам, касающимся строительства?
+							.right-col
+								.image-holder
+									img(src="http://stfleurlaw.com/wp-content/uploads/2016/03/Law-OMC.jpg", alt="image")
 							.full-col
 								a.btn Заказать услугу
 								a.btn Заказать консультацию
 
 						li#category-3.slide.hidden
-							.full-col
-								h2 Интеллектуальное право
-								p Описание услуги в нескольких словах. Это должен быть продающий текст.
+							.left-col
+								.slide-description
+									h2 Интеллектуальное право
+									p Описание услуги в нескольких словах. Это должен быть продающий текст.
 								ul.services-list
 									li
 										div.
@@ -83,14 +109,26 @@ html(lang='en')
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 60 60" style="fill: rgb(255, 255, 255);" xml:space="preserve"> <g style="fill: rgb(255, 255, 255);"> <path d="M30,0C13.458,0,0,13.458,0,30s13.458,30,30,30s30-13.458,30-30S46.542,0,30,0z M30,58C14.561,58,2,45.439,2,30   S14.561,2,30,2s28,12.561,28,28S45.439,58,30,58z" style="fill: rgb(255, 255, 255);"></path> <path d="M30,6c-0.552,0-1,0.447-1,1v23H14c-0.552,0-1,0.447-1,1s0.448,1,1,1h16c0.552,0,1-0.447,1-1V7C31,6.447,30.552,6,30,6z" style="fill: rgb(255, 255, 255);"></path> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> </svg>
 										b 16 
 										span  р. дней
+									li
+										div.
+											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 487.958 487.958" style="fill: rgb(255, 255, 255);" xml:space="preserve"> <g style="fill: rgb(255, 255, 255);"> <path d="M483.058,215.613l-215.5-177.6c-4-3.3-9.6-4-14.3-1.8c-4.7,2.2-7.7,7-7.7,12.2v93.6c-104.6,3.8-176.5,40.7-213.9,109.8   c-32.2,59.6-31.9,130.2-31.6,176.9c0,3.8,0,7.4,0,10.8c0,6.1,4.1,11.5,10.1,13.1c1.1,0.3,2.3,0.4,3.4,0.4c4.8,0,9.3-2.5,11.7-6.8   c73-128.7,133.1-134.9,220.2-135.2v93.3c0,5.2,3,10,7.8,12.2s10.3,1.5,14.4-1.8l215.4-178.2c3.1-2.6,4.9-6.4,4.9-10.4   S486.158,218.213,483.058,215.613z M272.558,375.613v-78.1c0-3.6-1.4-7-4-9.5c-2.5-2.5-6-4-9.5-4c-54.4,0-96.1,1.5-136.6,20.4   c-35,16.3-65.3,44-95.2,87.5c1.2-39.7,6.4-87.1,28.1-127.2c34.4-63.6,101-95.1,203.7-96c7.4-0.1,13.4-6.1,13.4-13.5v-78.2   l180.7,149.1L272.558,375.613z" style="fill: rgb(255, 255, 255);"></path> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> </svg>
+										a(href="#") Подробнее
+								ul.additional
+									li Наши знания и опыт позволят учесть все возможные риски и нюансы
+									li Наша компания предоставляет услуги в данной сфере уже более 7-ми лет
+									li Мы проконсультируем Вас независимо от сложности вопроса
+							.right-col
+								.image-holder
+									img(src="http://www.startyourbusinessmag.com/wp-content/uploads/2013/07/law-320x256.jpg", alt="image")
 							.full-col
 								a.btn Заказать услугу
 								a.btn Заказать консультацию
 
 						li#category-4.slide.hidden
-							.full-col
-								h2 Абонентское обслуживание
-								p Описание услуги в нескольких словах. Это должен быть продающий текст.
+							.left-col
+								.slide-description
+									h2 Абонентское обслуживание
+									p Описание услуги в нескольких словах. Это должен быть продающий текст.
 								ul.services-list
 									li
 										div.
@@ -102,6 +140,16 @@ html(lang='en')
 											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 60 60" style="fill: rgb(255, 255, 255);" xml:space="preserve"> <g style="fill: rgb(255, 255, 255);"> <path d="M30,0C13.458,0,0,13.458,0,30s13.458,30,30,30s30-13.458,30-30S46.542,0,30,0z M30,58C14.561,58,2,45.439,2,30   S14.561,2,30,2s28,12.561,28,28S45.439,58,30,58z" style="fill: rgb(255, 255, 255);"></path> <path d="M30,6c-0.552,0-1,0.447-1,1v23H14c-0.552,0-1,0.447-1,1s0.448,1,1,1h16c0.552,0,1-0.447,1-1V7C31,6.447,30.552,6,30,6z" style="fill: rgb(255, 255, 255);"></path> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> </svg>
 										b 2 
 										span  р. дней
+									li
+										div.
+											<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 487.958 487.958" style="fill: rgb(255, 255, 255);" xml:space="preserve"> <g style="fill: rgb(255, 255, 255);"> <path d="M483.058,215.613l-215.5-177.6c-4-3.3-9.6-4-14.3-1.8c-4.7,2.2-7.7,7-7.7,12.2v93.6c-104.6,3.8-176.5,40.7-213.9,109.8   c-32.2,59.6-31.9,130.2-31.6,176.9c0,3.8,0,7.4,0,10.8c0,6.1,4.1,11.5,10.1,13.1c1.1,0.3,2.3,0.4,3.4,0.4c4.8,0,9.3-2.5,11.7-6.8   c73-128.7,133.1-134.9,220.2-135.2v93.3c0,5.2,3,10,7.8,12.2s10.3,1.5,14.4-1.8l215.4-178.2c3.1-2.6,4.9-6.4,4.9-10.4   S486.158,218.213,483.058,215.613z M272.558,375.613v-78.1c0-3.6-1.4-7-4-9.5c-2.5-2.5-6-4-9.5-4c-54.4,0-96.1,1.5-136.6,20.4   c-35,16.3-65.3,44-95.2,87.5c1.2-39.7,6.4-87.1,28.1-127.2c34.4-63.6,101-95.1,203.7-96c7.4-0.1,13.4-6.1,13.4-13.5v-78.2   l180.7,149.1L272.558,375.613z" style="fill: rgb(255, 255, 255);"></path> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> <g style="fill: rgb(255, 255, 255);"> </g> </svg>
+										a(href="#") Подробнее
+								ul.additional
+									li Вы избежите множества рисков и необоснованных затрат
+									li И наконец-то лучшая характеристика нашей работы – это наши клиенты
+							.right-col
+								.image-holder
+									img(src="http://landwehrlawmn.com/wp-content/uploads/2015/03/law-wallpapers-hd-1080p-1920x1080-desktop-02.jpg", alt="image")
 							.full-col
 								a.btn Заказать услугу
 								a.btn Заказать консультацию
@@ -245,7 +293,7 @@ html(lang='en')
 			.container.top-news-holder
 				.parnters-container.owl-carousel
 					mixin new-item (name, img, href)
-						.item.new-item
+						.item.new-item(style="background-image:url('" + img + "')")
 							img(src= img)
 							span.label= name
 							a.btn(href= href) Узнать больше
