--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -145,8 +145,8 @@
 			height: 12px
 			width: 12px
 
-// .menu
-body > .menu
+// .navigation-bar
+.navigation-bar
 	color: #eee
 	font-size: 12px
 	position: relative
@@ -286,8 +286,8 @@ body > .menu
 		right: 0
 		top: 0
 
-// .menu2
-.menu2
+// .main-navigation
+.main-navigation
 	color: #000
 	font-size: 12px
 	a
@@ -363,6 +363,8 @@ body > .menu
 				background: #f9f9f9
 				color: #333
 
+.lang-switcher
+
 .header
 	.logo.invisible
 		opacity: 0
@@ -402,15 +404,6 @@ body > .menu
 			font-size: 20px
 			font-weight: 400
 			line-height: 1em
-			// &:before
-			//  background-image: url('../img/icons/phone-icon-1.svg')
-			//  background-size: contain
-			//  content: ''
-			//  height: 29px
-			//  left: -10px
-			//  position: absolute
-			//  position: absolute
-			//  width: 12px
 			.clear
 				margin-bottom: 10px
 			.fl
@@ -464,7 +457,6 @@ body > .menu
 				height: 1px
 				border-bottom: 0.25px dashed black
 				width: 100%
-	// .phones
 	.blue
 		display: block
 	.menu2
@@ -629,6 +621,7 @@ body > .menu
 		.left-col
 			width: 60%
 		.right-col
+			padding-left: 20px
 			text-align: right
 			width: 40%
 			.image-holder
@@ -2675,111 +2668,6 @@ body > .menu
 	right: 20px
 	bottom: 20px
 	display: none
-
-/* Start:/bitrix/templates/usticon/css/sprites.css*/
-.r-trng, .l-trng, .ic-fb, .ic-gplus, .ic-twitter, .ic-email, .ic-lj, .ic-vk, .soc2, .soc1, .soc3, .soc4, .soc5, .eng, .rus, .ukr, .s-1, .ic-logo, .ic-phone, .zoom, .smlogo, .blackphone, .s5, .s6, .s7, .s8, .s4, .s3, .s2, .s1, .skype
-	background: url('http://justicon.ua/bitrix/templates/usticon/css/sprites.png') no-repeat
-
-.r-trng
-	background-position: -346px -1px
-	width: 31px
-	height: 24px
-	display: none
-
-.l-trng
-	background-position: -297px 0
-	width: 30px
-	height: 24px
-	display: none
-
-.ic-fb
-	background-position: -592px 0
-	width: 26px
-	height: 24px
-
-.ic-gplus
-	background-position: -559px 0
-	width: 24px
-	height: 24px
-
-.ic-twitter
-	background-position: -520px 0
-	width: 26px
-	height: 24px
-
-.ic-email
-	background-position: -478px 0
-	width: 26px
-	height: 24px
-
-.ic-lj
-	background-position: -438px 0
-	width: 26px
-	height: 24px
-
-.ic-vk
-	background-position: -400px 0
-	width: 26px
-	height: 24px
-
-.eng
-	background-position: -98px -50px
-	width: 24px
-	height: 18px
-
-.rus
-	background-position: -48px -50px
-	width: 25px
-	height: 18px
-
-.ukr
-	background-position: 0 -51px
-	width: 24px
-	height: 18px
-
-.s-1
-	background-position: -196px 0
-	width: 24px
-	height: 23px
-
-.ic-logo
-	background-position: -148px 0
-	width: 33px
-	height: 39px
-
-.ic-phone
-	background-position: -98px 0
-	width: 34px
-	height: 39px
-
-.zoom
-	background-position: -49px 0
-	width: 26px
-	height: 26px
-
-.smlogo
-	background-position: -248px 0
-	width: 37px
-	height: 39px
-
-
-// SOCIALS spline
-.soc2, .soc1, .soc3, .soc4, .soc5
-	background: url('../img/content/socials-spline.svg') no-repeat
-	display: block
-	height: 38px
-	width: 38px
-
-.soc1
-	background-position: 0px 0px
-.soc2
-	background-position: -42px 0px
-.soc3
-	background-position: -84px 0px
-.soc4
-	background-position: -126px 0px
-.soc5
-	background-position: -168px 0px
 
 
 .breadcrumb
