--- a/src/more.jade
+++ b/src/more.jade
@@ -48,7 +48,7 @@ html(lang='en')
 		.container
 			ul.service-tab-buttons.tabs-holder
 				li.active
-					a(href='#tbd1' aria-controls="profile" role="tab" data-toggle="tab") Все
+					a(href='#tbd1' aria-controls="profile" role="tab" data-toggle="tab") Кратко
 				li
 					a(href='#tbd7' aria-controls="profile" role="tab" data-toggle="tab") Подробно
 				li
