--- a/src/partials/modals.jade
+++ b/src/partials/modals.jade
@@ -253,7 +253,7 @@
 									.title
 										a(href='/press-tsentr/rassylka/') Рассылка
 					li
-						a(href='/kontakty/')
+						a(href='/contacts/')
 							span Контакты
 						.submenu2
 							a.close(href='#')
@@ -303,5 +303,5 @@
 								.hr.separate10
 								.separate10.hg1
 								span.blue
-									a.r-pimp(href='/kontakty/') Посмотреть больше контактов
+									a.r-pimp(href='/contacts/') Посмотреть больше контактов
 			.clear
