--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -83,10 +83,7 @@
 			span
 			span
 		ul
-			li.first
-				a(href='/')
-					img(src='/bitrix/templates/usticon/i/sprites/smlogo.png')
-			li
+			li.services-trigger
 				svg(version="1.1" x="0px" y="0px" viewBox="0 0 12 13" enable-background="new 0 0 12 13" xml:space="preserve")
 					path(fill="#ffffff" d="M0,12.3L0.7,13L7,6.5l0,0l0,0L0.7,0L0,0.7l5.7,5.8L0,12.3z M5,12.3L5.7,13L12,6.5l0,0 l0,0L5.7,0L5,0.7l5.7,5.8L5,12.3z")
 				a(href='/uslugi/')
